--- a/Resume.html
+++ b/Resume.html
@@ -5,12 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resume</title>
-    <link rel="stylesheet" href="CV.css">
-    <link rel="stylesheet" href="images.css">
+    <link rel="stylesheet" href="./assets/CSS/CV.css">
+    <link rel="stylesheet" href="./assets/CSS/images.css">
+
+    <script src="./assets/jquery-3.5.1.min/jquery-3.5.1.min.js"></script>
+    <script src="./assets/bootstrap-4.5.3-dist/js/bootstrap.bundle.js">
+        
+    </script>
 </head>
 
 <body class="page">
-    <div>
+    <div id="cv">
         <table>
             <tr>
                 <th colspan="2" class="DJ">Djengiz Fejzulai</th>
@@ -20,7 +25,7 @@
                 <td class="right">Work Experience</td>
             </tr>
             <tr>
-                <td class="personal-td left"><img src="./images/Personal.jpg" alt="personal-jpg" class="personal">
+                <td class="personal-td left"><img src="./assets/images/Personal.jpg" alt="personal-jpg" class="personal">
                 </td>
                 <td rowspan="10" class="right">
                     <span>04.2018 -12.2019</span>
@@ -91,13 +96,13 @@
             </tr>
             <tr>
                 <td class="left" style="text-align: center;">
-                    <span><img src="./images/location.png" class="location"></span>
+                    <span><img src="./assets/images/location.png" class="location"></span>
                     <li>Vizbegovo ul.5 br.126 g 1000 Skopje</li>
-                    <span><img src="./images/phone.png" class="phone"></span>
+                    <span><img src="./assets/images/phone.png" class="phone"></span>
                     <li>00389-77-533-814</li>
-                    <span><img src="./images/mail.jpg" class="mail"></span>
+                    <span><img src="./assets/images/mail.jpg" class="mail"></span>
                     <li>djengiz.fejzulai@gmail.com</li>
-                    <span><img src="./images/linkedin.png" class="linkedin"></span>
+                    <span><img src="./assets/images/linkedin.png" class="linkedin"></span>
                     <li>www.linkedin.com/in/djengiz-fejzulai-81a610b4
                     </li>
                 </td>
@@ -167,5 +172,4 @@
         </table>
     </div>
 </body>
-
 </html>
